--- a/notebooks/data_torch_exploration.ipynb
+++ b/notebooks/data_torch_exploration.ipynb
@@ -26,6 +26,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Seed everything\n",
+    "pl.seed_everything(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -228,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,12 +306,21 @@
     "            num_workers = 0\n",
     "        )\n",
     "        return val_loader\n",
+    "\n",
+    "    def test_dataloader(self):\n",
+    "        test_loader = DataLoader(\n",
+    "            self.testing_set,\n",
+    "            batch_size = Config.val_bs,\n",
+    "            shuffle=False,\n",
+    "            num_workers = 0\n",
+    "        )\n",
+    "        return test_loader\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +346,6 @@
     "        return x\n",
     "\n",
     "\n",
-    "\n",
     "    def training_step(self, batch, batch_idx):\n",
     "        logits = self.forward(batch[\"features\"])\n",
     "        loss = self.loss_func(logits, batch['targets'])\n",
@@ -324,6 +360,15 @@
     "        val_acc = torch.tensor(val_acc)\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
     "        self.log(\"val_acc\", val_acc, prog_bar=True)\n",
+    "\n",
+    "    def test_step(self, batch, batch_idx):\n",
+    "        logits = self.forward(batch[\"features\"])\n",
+    "        loss = self.loss_func(logits, batch['targets'])\n",
+    "        _, preds = torch.max(logits, dim=1)\n",
+    "        test_acc = accuracy_score(preds.cpu(), batch[\"targets\"].cpu())\n",
+    "        self.log(\"test_loss\", loss)\n",
+    "        self.log(\"test_acc\", test_acc) \n",
+    "        \n",
     "\n",
     "    def loss_func(self, pred, target):\n",
     "        return F.cross_entropy(pred, target)\n",
@@ -341,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -377,6 +422,7 @@
      "text": [
       "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\data_loading.py:116: UserWarning: The dataloader, val_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  rank_zero_warn(\n",
+      "Global seed set to 42\n",
       "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\data_loading.py:116: UserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  rank_zero_warn(\n"
      ]
@@ -385,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9: 100%|██████████| 38/38 [00:00<00:00, 210.50it/s, loss=0.551, v_num=0, train_loss=0.279, val_loss=0.489, val_acc=0.815]\n"
+      "Epoch 9: 100%|██████████| 38/38 [00:00<00:00, 233.13it/s, loss=0.596, v_num=4, train_loss=0.755, val_loss=0.518, val_acc=0.785]\n"
      ]
     }
    ],
@@ -401,6 +447,46 @@
     "    log_every_n_steps = 5\n",
     ")\n",
     "trainer.fit(model, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\data_loading.py:116: UserWarning: The dataloader, test_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing: 0it [00:00, ?it/s]--------------------------------------------------------------------------------\n",
+      "DATALOADER:0 TEST RESULTS\n",
+      "{'test_acc': 0.6935483813285828, 'test_loss': 0.576137125492096}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Testing: 100%|██████████| 8/8 [00:00<00:00, 347.94it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'test_loss': 0.576137125492096, 'test_acc': 0.6935483813285828}]"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Perform evaluation\n",
+    "trainer.test(model, data)"
    ]
   },
   {
