added predictor module; callbacks

--- a/notebooks/data_torch_exploration.ipynb
+++ b/notebooks/data_torch_exploration.ipynb
@@ -386,7 +386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Callback\n",
+    "checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
+    "    dirpath = \"./models\",\n",
+    "    monitor = \"val_loss\",\n",
+    "    mode = \"min\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9: 100%|██████████| 38/38 [00:00<00:00, 233.13it/s, loss=0.596, v_num=4, train_loss=0.755, val_loss=0.518, val_acc=0.785]\n"
+      "Epoch 9: 100%|██████████| 38/38 [00:00<00:00, 222.22it/s, loss=0.596, v_num=0, train_loss=0.755, val_loss=0.518, val_acc=0.785]\n"
      ]
     }
    ],
@@ -444,7 +458,8 @@
     "    max_epochs=10,\n",
     "    fast_dev_run=False,\n",
     "    accelerator='cpu',\n",
-    "    log_every_n_steps = 5\n",
+    "    log_every_n_steps = 5,\n",
+    "    callbacks = [checkpoint_callback]\n",
     ")\n",
     "trainer.fit(model, data)"
    ]
@@ -487,6 +502,83 @@
    "source": [
     "# Perform evaluation\n",
     "trainer.test(model, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\Projects\\\\mlops-experiment\\\\notebooks\\\\lightning_logs\\\\version_0'"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.logger.log_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HabermanPredictor:\n",
+    "    def __init__(self, model_path):\n",
+    "        self.model_path = model_path \n",
+    "        self.model = HabermanModel.load_from_checkpoint(model_path)\n",
+    "        self.model.eval()\n",
+    "        self.model.freeze()\n",
+    "        self.processor = HabermanDataModule(Config.file_path)\n",
+    "        self.softmax = torch.nn.Softmax(dim=0)\n",
+    "        self.labels = [\"survived\", \"did not survived\"]\n",
+    "\n",
+    "    def predict(self, input):\n",
+    "        logits = self.model(\n",
+    "            torch.tensor([input], dtype=torch.float)\n",
+    "        )\n",
+    "        scores = self.softmax(logits[0]).tolist()\n",
+    "        predictions = []\n",
+    "        for score, label in zip(scores, self.labels):\n",
+    "            predictions.append({'label': label, 'score': score})\n",
+    "        return predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = HabermanPredictor(\"./models/epoch=8-step=116.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'survived', 'score': 0.8074608445167542},\n",
+       " {'label': 'did not survived', 'score': 0.19253917038440704}]"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictor.predict([34, 60, 0])"
    ]
   },
   {
