added login; refactored requirements

--- a/notebooks/data_torch_exploration.ipynb
+++ b/notebooks/data_torch_exploration.ipynb
@@ -9,19 +9,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\setuptools\\distutils_patch.py:25: UserWarning: Distutils was imported before Setuptools. This usage is discouraged and may exhibit undesirable behaviors or errors. Please use Setuptools' objects directly or at least import Setuptools first.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn \n",
     "import pytorch_lightning as pl\n",
+    "import wandb\n",
     "\n",
+    "from dotenv import load_dotenv\n",
     "from torch.utils.data import DataLoader, Dataset, random_split\n",
     "from torch.nn import functional as F\n",
-    "from transformers import AutoTokenizer, AutoModel\n",
     "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WANDB_API_KEY = os.getenv(\"WANDB_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33manthonyckleung\u001b[0m (use `wandb login --relogin` to force relogin)\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publically.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: C:\\Users\\Anthony/.netrc\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.login(key=WANDB_API_KEY)"
    ]
   },
   {
@@ -502,26 +573,6 @@
    "source": [
     "# Perform evaluation\n",
     "trainer.test(model, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'e:\\\\Projects\\\\mlops-experiment\\\\notebooks\\\\lightning_logs\\\\version_0'"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer.logger.log_dir"
    ]
   },
   {
