added benchmark to onnx predict

--- a/notebooks/data_torch_exploration.ipynb
+++ b/notebooks/data_torch_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
     "from pytorch_lightning.loggers import WandbLogger\n",
     "from torch.utils.data import DataLoader, Dataset, random_split\n",
     "from torch.nn import functional as F\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "42"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4   31    65                  4       1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -654,6 +654,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\IPython\\html.py:12: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  warn(\"The `IPython.html` package has been deprecated since IPython 4.0. \"\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.12.9 is available!  To upgrade, please run:\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n"
      ]
@@ -662,7 +664,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    Syncing run <strong><a href=\"https://wandb.ai/anthonyckleung/MLOps%20Basics/runs/1zekjzkt\" target=\"_blank\">mild-bird-3</a></strong> to <a href=\"https://wandb.ai/anthonyckleung/MLOps%20Basics\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/anthonyckleung/MLOps%20Basics/runs/3m2994ji\" target=\"_blank\">tough-thunder-4</a></strong> to <a href=\"https://wandb.ai/anthonyckleung/MLOps%20Basics\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
        "\n",
        "                "
       ],
@@ -694,7 +696,24 @@
       "124       Trainable params\n",
       "0         Non-trainable params\n",
       "124       Total params\n",
-      "0.000     Total estimated model params size (MB)\n"
+      "0.000     Total estimated model params size (MB)\n",
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\callbacks\\model_checkpoint.py:623: UserWarning: Checkpoint directory E:\\Projects\\mlops-experiment\\notebooks\\models exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation sanity check:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\data_loading.py:116: UserWarning: The dataloader, val_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
      ]
     },
     {
@@ -708,19 +727,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 42\n"
+      "Global seed set to 42\n",
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:685: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n",
+      "e:\\Projects\\mlops-experiment\\venv\\lib\\site-packages\\pytorch_lightning\\trainer\\data_loading.py:116: UserWarning: The dataloader, test_dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9: 100%|██████████| 20/20 [00:01<00:00, 19.69it/s, loss=0.519, v_num=jzkt, train/loss_step=0.262, train/acc_step=1.000, val/loss_step=0.180, val/loss_epoch=0.589, val/acc=0.714, val/precision_macro=0.523, val/recall_macro=0.558, val/precision_micro=0.714, val/recall_micro=0.714, val/f1=0.714, train/loss_epoch=0.537, train/acc_epoch=0.759]  \n",
       "Testing: 0it [00:00, ?it/s]--------------------------------------------------------------------------------\n",
       "DATALOADER:0 TEST RESULTS\n",
-      "{'test_acc': 0.8064516186714172, 'test_loss': 0.5059531331062317}\n",
+      "{'test_acc': 0.8548387289047241, 'test_loss': 0.4579375982284546}\n",
       "--------------------------------------------------------------------------------\n",
-      "Testing: 100%|██████████| 8/8 [00:00<00:00, 320.06it/s]\n"
+      "Testing: 100%|██████████| 8/8 [00:00<00:00, 235.33it/s]\n"
      ]
     }
    ],
@@ -737,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +951,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from functools import wraps\n",
+    "\n",
+    "\n",
+    "def timing(f):\n",
+    "    \"\"\"Decorator for timing functions\n",
+    "    Usage:\n",
+    "    @timing\n",
+    "    def function(a):\n",
+    "        pass\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @wraps(f)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start = time.time()\n",
+    "        result = f(*args, **kwargs)\n",
+    "        end = time.time()\n",
+    "        print(\"function:%r took: %2.5f sec\" % (f.__name__, end - start))\n",
+    "        return result\n",
+    "\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,6 +991,7 @@
     "        self.softmax = torch.nn.Softmax(dim=0)\n",
     "        self.labels = [\"survived\", \"did not survived\"]\n",
     "\n",
+    "    @timing\n",
     "    def predict(self, input):\n",
     "        ort_inputs =  {\"input\": torch.tensor(input, dtype=torch.float)\n",
     "        }\n",
@@ -958,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,9 +1019,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function:'predict' took: 0.00100 sec\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -977,13 +1036,42 @@
        " {'label': 'did not survived', 'score': 0.19040700793266296}]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "onnx_predictor.predict([34, 60, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function:'predict' took: 0.00100 sec\n",
+      "function:'predict' took: 0.00000 sec\n",
+      "function:'predict' took: 0.00100 sec\n",
+      "function:'predict' took: 0.00000 sec\n",
+      "function:'predict' took: 0.00100 sec\n",
+      "function:'predict' took: 0.00000 sec\n",
+      "function:'predict' took: 0.00100 sec\n",
+      "function:'predict' took: 0.00000 sec\n",
+      "function:'predict' took: 0.00000 sec\n",
+      "function:'predict' took: 0.00100 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_inputs = [[34, 60, 0]] *10\n",
+    "\n",
+    "for feature in batch_inputs:\n",
+    "    onnx_predictor.predict(feature)"
    ]
   },
   {
